fix display settings of list. added margin between elements on mobile

--- a/src/sass/pages/_guide.scss
+++ b/src/sass/pages/_guide.scss
@@ -77,7 +77,7 @@ body.guide-of-study {
     @media screen and(max-width: 700px) {
       //min-width: 310px;
       //width: 310px;
-
+      display: block;
     }
   }
 
@@ -109,10 +109,9 @@ body.guide-of-study {
       box-shadow: 0 3px 6px rgba(0, 0, 0, .1);
 
       @media screen and(max-width: 700px) {
-        padding-top: 30px;
-        padding-left: 10px;
-        padding-right: 10px;
-        height: 15%;
+        padding: 30px 10px;
+        height: auto;
+        margin-bottom: 30px;
       }
 
       &:hover {
